@@ -8,6 +8,10 @@ Changelog
 3.3.2 - Unreleased
 ------------------
 
+- Make the external_editor link on OS X use the .zem extension.
+  Fixes http://dev.plone.org/plone/ticket/7291
+  [optilude]
+
 - Fixed handling of URL fragment identifiers in form-tabbing. This closes
   http://dev.plone.org/plone/ticket/9500
   [mj]
